--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,9 @@ background-repeat: no-repeat;
   color:antiquewhite;
   text-shadow: 0px 0px 15px #34C2CE;
 }
+
+.display-weather {
+  border: 1px solid black;
+  border-radius: 30px;
+  background-color: antiquewhite;
+}
