--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,8 @@ background-repeat: no-repeat;
   border-radius: 30px;
   background-color: antiquewhite;
 }
+
+.forecast {
+  border: 1px solid black;
+  border-radius: 15px;
+}
